# servant-openapi

./: .travis.yml  README.md  cabal.project  servant-openapi.cabal  stack.yaml
openapi/: README.md  openapi.cabal  servant-openapi.cabal
openapi/src/: OpenAPI.hs
openapi/src/OpenAPI/: Class.hs  ToSchema.hs
openapi/src/OpenAPI/Internal/: Class.hs  References.hs  Types.hs
openapi/src/Servant/: OpenAPI.hs
openapi/src/Servant/OpenAPI/: Internal.hs
openapi/test/: Main.hs
openapi3/: CHANGELOG.md  LICENSE  openapi3.cabal
openapi3/src/: OpenAPI.hs
openapi3/src/OpenAPI/Internal/: References.hs  Types.hs
openapi3/test/: Main.hs
servant-openapi/: CHANGELOG.md  servant-openapi.cabal
servant-openapi/src/Servant/: OpenAPI.hs
servant-openapi/src/Servant/OpenAPI/: Internal.hs
servant-openapi/test/: Main.hs
src/OpenAPI/: ToSchema.hs
src/OpenAPI/ToSchema/: Internal.hs
src/Servant/OpenAPI/: Internal.hs
src/Servant/OpenAPI/Internal/: Types.hs
test/: Main.hs
