name:
  openapi3
version:
  0.0.0.1
synopsis:
  OpenAPI schemas
description:
  Implements the OpenAPI 3.0.3 spec
bug-reports:
  https://github.com/felixmulder/servant-openapi
cabal-version:
  1.24
license:
  BSD3
license-file:
  LICENSE
author:
  Cliff Harvey, Felix Mulder
maintainer:
  cs.hbar+hs@gmail.com, felix.mulder@gmail.com
copyright:
  Cliff Harvey, Felix Mulder
category:
  Web, OpenAPI
build-type:
  Simple
extra-source-files:
    README.md
  , CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/felixmulder/servant-openapi.git

library
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeApplications
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall
    -Wredundant-constraints
    -fhide-source-paths
    -- -Wmissing-deriving-strategies – commented out for GHC 8.6

  exposed-modules:
    OpenAPI
    OpenAPI.Internal.Class
    OpenAPI.Internal.Types
    OpenAPI.Internal.References

  build-depends:
      aeson                     >= 1.4.0    && < 1.5
    , aeson-deriving            >= 0.1      && < 0.2
    , base                      >= 4.9      && < 5
    , bytestring
    , containers                >= 0.6      && < 0.7
    , generic-lens              >= 1.0      && < 2.1
    , lens                      >= 4.17     && < 4.20
    , servant                   >= 0.16     && < 0.18
    , text                      >= 1.2      && < 1.3
    , time
    , uuid
    , transformers
    , unordered-containers
    , yaml

  hs-source-dirs:
    src

  default-language:
    Haskell2010

test-suite openapi-tests
  type:
    exitcode-stdio-1.0

  default-language:
    Haskell2010

  main-is:
    Main.hs

  ghc-options:
    -Wall -Wredundant-constraints -fhide-source-paths -threaded

  hs-source-dirs:
    test

  other-modules:

  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeApplications
    TypeApplications
    TypeOperators
    ViewPatterns

  build-depends:
      openapi3

    , aeson                     >= 1.4      && < 1.5
    , aeson-deriving            >= 0.1      && < 0.2
    , base                      >= 4.9      && < 5
    , bytestring                >= 0.10     && < 0.11
    , hedgehog                  >= 0.6      && < 1.1
    , text                      >= 1.2      && < 1.3
    , yaml                      >= 0.11.2.0 && < 0.12
